--- a/custom_components/acond/translations/en.json
+++ b/custom_components/acond/translations/en.json
@@ -2,7 +2,7 @@
     "config": {
         "step": {
             "user": {
-                "description": "If you need help with the configuration have a look here: https://github.com/ludeeus/acond",
+                "description": "If you need help with the configuration have a look here: https://github.com/piotrekcrash/acond",
                 "data": {
                     "username": "Username",
                     "password": "Password",
