--- a/custom_components/acond/translations/en.json
+++ b/custom_components/acond/translations/en.json
@@ -6,7 +6,7 @@
                 "data": {
                     "username": "Username",
                     "password": "Password",
-                    "ip_address": "IP Address"
+                    "ip": "IP Address"
                 }
             }
         },
